--- a/WD-17/package.json
+++ b/WD-17/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gfg",
   "version": "1.0.0",
-  "main": "script_test.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
